# backend-training

./: README.md
.github/: CODEOWNERS  (+1 more)
docker-learning/practice/docker-compose-practice/: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.scale.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
docker-learning/practice/docker-compose-practice/config/dev/: .env.example
docker-learning/practice/docker-compose-practice/config/local/: .env.example
docker-learning/practice/docker-compose-practice/config/prod/: .env.example
docker-learning/practice/docker-compose-practice/deploy/docker/app/: Dockerfile  Dockerfile.optimized
docker-learning/practice/docker-compose-practice/deploy/docker/nginx/: Dockerfile
docker-learning/practice/docker-compose-practice/deploy/nginx/: nginx.conf
docker-learning/practice/docker-compose-practice/deploy/nginx/conf.d/: default.conf
docker-learning/practice/docker-compose-practice/deploy/scripts/: entrypoint.sh
docker-learning/practice/docker-compose-practice/docs/: BUILD_OPTIMIZATION.md  PROJECT_VERIFICATION.md  README.md  SCALING_GUIDE.md  api.md  architecture.md  quick-start.md
docker-learning/practice/docker-compose-practice/src/app/: __init__.py  routes.py
docker-learning/practice/docker-compose-practice/src/app/config/: settings.py
docker-learning/practice/docker-compose-practice/src/requirements/: base.txt  dev.txt  prod.txt
docker-learning/practice/docker-compose-practice/src/tests/: test_app.py
(+730 files in other folders)
