[project]
name = "docker-compose-practice"
version = "0.1.0"
description = "A Flask application with Redis using Docker Compose"
requires-python = ">=3.11"
dependencies = [
    "flask==2.3.3",
    "redis==4.6.0",
    "python-dotenv==1.0.0",
    "gunicorn==21.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "pytest-cov==4.1.0",
    "flake8==6.1.0",
    "black==23.7.0",
    "isort==5.12.0",
    "ipython==8.14.0",
    "debugpy==1.8.0",
]

prod = [
    "sentry-sdk==1.29.2",
    "prometheus-flask-exporter==0.22.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
